--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-
+<p align="center">
+  <img src="https://github.com/omid-sakaki-ghazvini/Deploying-Deep-Learning-Models-with-FastAPI-Docker/blob/master/deepLearning_fastapi_docker.jpg" width="250" height="250">
+</p>
